--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.4.0",
     "sharp": "^0.33.4",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
